--- a/style.css
+++ b/style.css
@@ -40,11 +40,7 @@ hr {
     border-top: 1px dotted #efefef;
 }
 
-/* img {
-    max-width: 100%;
-} */
-
-h1 {
+.main-title {
     background-color: var(--dark-c);
     color: var(--neon-purple);
 }
@@ -59,6 +55,7 @@ h1 {
     padding: 10px;
     font-size: 12px;
     color: var(--white-color);
+    cursor: pointer;
 }
 
 .secondary-button {
@@ -71,7 +68,7 @@ h1 {
     border-color: var(--bright-yellow)
 }
 
-/* players list */
+/* ----------------- players list ------------------------- */
 
 .players {
     display: flex;
@@ -87,7 +84,6 @@ h1 {
 
 .players .players-main {
     display: flex;
-    /* flex-wrap: wrap; */
     gap: 30px;
     justify-content: space-between;
     padding: 30px;
@@ -132,13 +128,11 @@ h1 {
 
 .card {
     color: var(--white-color);
-    /* background-color: var(--neon-purple); */
     position: absolute;
     bottom: 13px;
 }
 
 .card .card-inner {
-    /* max-width: 160px; */
     display: flex;
     flex-direction: column;
 }
@@ -211,3 +205,106 @@ h1 {
 .card .club img {
     width: 20px;
 }
+
+/* -----------------  MODAL  ------------------ */
+.modal-container {
+    background-color: rgba(0, 0, 0, 0.7);
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    position: fixed;
+    opacity: 1;
+    pointer-events: auto;
+    top: 0;
+    left: 0;
+    height: 100vh;
+    width: 100vw;
+    transition: opacity 0.3s linear;
+}
+
+.modal-container.show {
+    pointer-events: auto;
+    opacity: 1;
+}
+
+.modal {
+    background-color: var(--white-color);
+    width: auto;
+    max-width: 100%;
+    padding: 30px 50px;
+    border-radius: 5px;
+    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.2);
+    text-align: center;
+    display: flex;
+    flex-direction: column;
+    gap: 50px;
+}
+
+.modal form {
+    display: flex;
+    flex-direction: column;
+    gap: 25px;
+}
+
+.modal h1 {
+    margin: 0;
+    padding: 0;
+}
+
+.modal .one-line {
+    display: flex;
+    justify-content: start;
+    width: 100%;
+    gap: 10px;
+}
+
+.modal .one-input {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: start;
+    gap: 6px;
+    font-size: 14px;
+    width: 200px;
+}
+
+.one-input label {
+    font-weight: 600px;
+
+}
+
+.one-input input {
+    border-radius: 4px;
+    border: 1.3px solid rgb(204, 197, 197);
+    width: 100%;
+    height: 20px;
+    padding: 20px 10px;
+    color: black;
+}
+
+.one-input select {
+    border-radius: 4px;
+    border: 1.3px solid rgb(204, 197, 197);
+    width: 100%;
+    height: 40px;
+    padding: 0 10px;
+}
+
+.one-input input:focus,
+select:focus {
+    border: 1.3px solid rgb(142, 138, 138);
+    outline: none;
+}
+
+.modal .buttons {
+    display: flex;
+    justify-content: end;
+    gap: 10px;
+}
+
+.modal .secondary-button,
+.modal .main-button {
+    width: 160px
+}
+
+/* -------------------------------------------- */
