--- a/style.css
+++ b/style.css
@@ -213,8 +213,8 @@ hr {
     align-items: center;
     justify-content: center;
     position: fixed;
-    opacity: 1;
-    pointer-events: auto;
+    opacity: 0;
+    pointer-events: none;
     top: 0;
     left: 0;
     height: 100vh;
@@ -258,7 +258,7 @@ hr {
     gap: 10px;
 }
 
-.modal .one-input {
+.modal .one-input-box {
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -268,31 +268,77 @@ hr {
     width: 200px;
 }
 
-.one-input label {
+.one-input-box label {
     font-weight: 600px;
-
 }
 
-.one-input input {
+.one-input-box .one-input {
+    display: flex;
+    align-items: center;
+    gap: 5px;
+    width: 100%;
+    position: relative;
+}
+
+.one-input i {
+    position: absolute;
+    top: 15px;
+    right: 10px;
+    visibility: hidden;
+}
+
+.one-input small {
+    position: absolute;
+    top: 42px;
+    left: 0;
+    visibility: hidden;
+}
+
+.one-input.success input {
+    border-color: #2ecc71;
+}
+
+.one-input.error input {
+    border-color: #e74c3c;
+}
+
+.one-input.success i.fa-circle-check {
+    visibility: visible;
+    color: #2ecc71;
+}
+
+
+.one-input.error i.fa-exclamation {
+    visibility: visible;
+    color: #e74c3c;
+}
+
+.one-input.error small {
+    visibility: visible;
+    color: #e74c3c;
+}
+
+.one-input-box input {
     border-radius: 4px;
     border: 1.3px solid rgb(204, 197, 197);
     width: 100%;
     height: 20px;
     padding: 20px 10px;
     color: black;
+
 }
 
-.one-input select {
+.one-input-box select {
     border-radius: 4px;
-    border: 1.3px solid rgb(204, 197, 197);
+    border: 1.5px solid rgb(204, 197, 197);
     width: 100%;
     height: 40px;
     padding: 0 10px;
 }
 
-.one-input input:focus,
+.one-input-box input:focus,
 select:focus {
-    border: 1.3px solid rgb(142, 138, 138);
+    border: 1.5px solid rgb(142, 138, 138);
     outline: none;
 }
 
