--- a/players.css
+++ b/players.css
@@ -216,7 +216,7 @@ hr {
 
 /* -----------------  MODAL  ------------------ */
 .modal-container {
-  
+
     background-color: rgba(0, 0, 0, 0.7);
     display: flex;
     align-items: center;
@@ -279,6 +279,7 @@ hr {
 
 .one-input-box label {
     font-weight: 600px;
+    text-transform: capitalize;
 }
 
 .one-input-box .one-input {
@@ -343,6 +344,7 @@ hr {
     width: 100%;
     height: 40px;
     padding: 0 10px;
+    cursor: pointer;
 }
 
 .one-input-box input:focus,
