--- a/players.css
+++ b/players.css
@@ -96,12 +96,15 @@ hr {
     justify-content: space-between;
     padding: 30px;
     width: 100%;
+    background-image: linear-gradient(rgba(52, 48, 48, 0.6), rgba(19, 18, 57, 0.842));
+    border-radius: 30px;
+    background-repeat: no-repeat;
 }
 
 .players .players-main .players-all {
     display: grid;
     grid-template-columns: repeat(auto-fit, minmax(100px, 155px));
-    background-color: var(--dark-color);
+    /* background-color: var(--dark-color); */
     width: 100%;
     border-radius: 10px;
     padding: 20px 0;
@@ -202,6 +205,7 @@ hr {
 
 .card .card-bottom .name {
     color: #d3cca3;
+    width: max-content;
 }
 
 .card .card-bottom .stats ul {
@@ -258,7 +262,7 @@ hr {
 .modal {
     background-color: var(--white-color);
     width: auto;
-    max-width: 100%;
+    max-width: 90%;
     padding: 30px 50px;
     border-radius: 5px;
     box-shadow: 0 2px 4px rgba(0, 0, 0, 0.2);
@@ -395,11 +399,31 @@ select:focus {
     }
 
     .modal form {
-        gap: 40px;
+        gap: 30px;
     }
 
     .error small {
         font-size: 10px;
+    }
+
+    .modal {
+        background-color: var(--white-color);
+        max-width: 85%;
+        padding: 10px 20px;
+        border-radius: 5px;
+        box-shadow: 0 2px 4px rgba(0, 0, 0, 0.2);
+        text-align: center;
+        display: flex;
+        flex-direction: column;
+        gap: 20px;
+    }
+
+    .modal h1 {
+        font-size: 26px;
+    }
+
+    .modal .buttons {
+        margin-top: 16px;
     }
 }
 
