--- a/players.css
+++ b/players.css
@@ -136,10 +136,8 @@ hr {
 
 .card-full .image {
     position: relative;
-    width: 200px;
     display: flex;
     margin-bottom: 5px;
-    gap: -10px;
 }
 
 .card {
@@ -155,10 +153,11 @@ hr {
 
 .card .card-top {
     display: flex;
-    color: #d3cca3;
-    justify-content: flex-start;
+    color: #ece6c3;
+    justify-content: center;
     align-items: start;
-    width: 170px;
+    width: 190px;
+    padding:  0  12px 0 ;
 }
 
 .card .card-top .info {
@@ -171,24 +170,46 @@ hr {
 }
 
 .card .card-top .info .position {
-    font-size: 12px;
+    font-size: 16px;
     font-weight: 500;
 }
 
-.card .card-top .image a {
-    height: 30px;
+.card .card-top .edit-delete {
+    display: flex;
+    flex-direction: column;
+    gap: 10px;
+}
+
+.card .card-top .delete-player,
+.card .card-top .edit-player {
     display: flex;
     justify-content: center;
     align-items: center;
-    color: var(--deep-orange);
-    font-size: 25px;
+    font-size: 20px;
     margin-left: -10px;
     cursor: pointer;
-    transition: 0.3s;
+    background-color: rgba(239, 231, 231, 0.409);
+    padding: 5px;
+    border-radius: 8px;
+    transition: 0.4s;
 }
 
-.card .card-top .image a:hover {
-    color: #A020F0;
+.card .card-top .delete-player {
+    color: red;
+}
+
+.card .card-top .edit-player {
+    color: var(--neon-purple);
+}
+
+.card .card-top .delete-player:hover {
+    background-color: red;
+    color: var(--white-smoke);
+}
+
+.card .card-top .edit-player:hover {
+    background-color: var(--neon-purple);
+    color: var(--white-smoke);
 }
 
 .card .card-top .image img {
@@ -204,7 +225,7 @@ hr {
 }
 
 .card .card-bottom .name {
-    color: #d3cca3;
+    color: #ece09b;
     width: max-content;
 }
 
